--- a/source/gui/Karaoke.qrc
+++ b/source/gui/Karaoke.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="">
          <file>images/background_normal.png</file>
          <file>images/dialog_background.png</file>
+         <file>images/unknown_avatar.png</file>
 	</qresource>
 </RCC>
