--- a/source/gui/Karaoke.qrc
+++ b/source/gui/Karaoke.qrc
@@ -4,5 +4,14 @@
          <file>images/dialog_background.png</file>
          <file>images/unknown_avatar.png</file>
          <file>images/song_select.png</file>
+         <file>images/play.png</file>
+         <file>images/stop.png</file>
+         <file>images/pause.png</file>
+         <file>images/next.png</file>
+         <file>images/prev.png</file>
+         <file>images/menu-goto-select.png</file>
+         <file>images/menu-goto-playlist.png</file>
+         <file>images/menu-goto-player.png</file>
+         <file>images/menu-goto-logout.png</file>
   	</qresource>
 </RCC>
